--- a/screen.html
+++ b/screen.html
@@ -14,47 +14,23 @@ html, body { margin:0; height:100%; overflow:hidden; font-family:sans-serif; bac
 #connectionStatus { position:absolute; top:10px; left:10px; font-size:28px; font-weight:bold; text-shadow:0 0 8px #000; z-index:3; }
 .connected { color:#0f0; }
 .disconnected { color:#ff3b3f; }
-#statusText {
-  position:absolute;
-  top:50%;
-  left:10px;
-  transform:translateY(-50%);
-  background:rgba(0,0,0,0.5);
-  color:#fff;
-  padding:10px 15px;
-  border-radius:8px;
-  font-size:24px;
-  font-weight:bold;
-  opacity:0;
-  transition:opacity 1s ease;
-  z-index:4;
-}
-#playlistCount {
-  position:absolute;
-  top:60px;
-  right:20px;
-  font-size:24px;
-  background:rgba(0,0,0,0.5);
-  padding:8px 12px;
-  border-radius:8px;
-  z-index:4;
-}
+#statusText { position:absolute; top:50%; left:10px; transform:translateY(-50%); background:rgba(0,0,0,0.5); color:#fff; padding:10px 15px; border-radius:8px; font-size:24px; font-weight:bold; opacity:0; transition:opacity 1s ease; z-index:4; }
+#playedCount { position:absolute; top:60px; left:10px; font-size:24px; background:rgba(0,0,0,0.5); padding:8px 12px; border-radius:8px; z-index:4; }
 </style>
 </head>
 <body>
 
 <div id="connectionStatus">Room ID: ——— (Chưa kết nối)</div>
 <div id="background"></div>
-<iframe id="player" allowfullscreen allow="autoplay" sandbox="allow-same-origin allow-scripts allow-presentation"></iframe>
+<iframe id="player" allowfullscreen allow="autoplay" allow="encrypted-media"></iframe>
 <div id="title"><span></span></div>
 <div id="statusText"></div>
-<div id="playlistCount">🎵 0 bài</div>
+<div id="playedCount">🎵 Tổng: 0 bài</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getDatabase, ref, onValue, set, increment } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-// Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyC1JW_dg-YChaizarbS-7UUN3njFomMPvI",
   authDomain: "karaokeweb-d414b.firebaseapp.com",
@@ -69,6 +45,7 @@ const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const commandRef = ref(db,"command");
 const connectionRef = ref(db,"connectionStatus");
+const playedCountRef = ref(db,"playedCount");
 
 let roomId = localStorage.getItem("roomId") || Math.floor(100000 + Math.random()*900000).toString();
 localStorage.setItem("roomId", roomId);
@@ -81,7 +58,7 @@ const titleSpan = titleEl.querySelector("span");
 const connectionStatusEl = document.getElementById("connectionStatus");
 const background = document.getElementById("background");
 const statusTextEl = document.getElementById("statusText");
-const playlistCountEl = document.getElementById("playlistCount");
+const playedCountEl = document.getElementById("playedCount");
 
 let currentVideoId = null;
 let fadeTimeout = null;
@@ -93,19 +70,21 @@ function showStatusText(msg){
   fadeTimeout = setTimeout(()=>{ statusTextEl.style.opacity = 0; },5000);
 }
 
-// Embed YouTube URL with minimal UI, hide end screen & info
 function setCommand(id,title){
-  currentVideoId=id;
   if(!id){
     playerIframe.style.display='none';
     titleEl.style.display='none';
     background.style.display='block';
+    currentVideoId = null;
   } else {
-    playerIframe.src = `https://www.youtube.com/embed/${id}?autoplay=1&controls=0&modestbranding=1&rel=0&fs=0&disablekb=1&showinfo=0&iv_load_policy=3&modestbranding=1&playsinline=1`;
+    playerIframe.src = `https://www.youtube.com/embed/${id}?autoplay=1&controls=0&modestbranding=1&rel=0&fs=0&enablejsapi=1`;
     background.style.display='none';
     playerIframe.style.display='block';
     titleEl.style.display='block';
     titleSpan.textContent = title;
+    currentVideoId=id;
+    // tăng tổng số bài đã phát
+    set(playedCountRef, increment(1));
   }
 }
 
@@ -114,22 +93,18 @@ onValue(commandRef,snapshot=>{
   const cmd = snapshot.val();
   if(!cmd) return;
   if(cmd.roomId === roomId){
-    if(cmd.id !== currentVideoId && cmd.id) setCommand(cmd.id,cmd.title);
-    
+    if(cmd.id !== currentVideoId) setCommand(cmd.id,cmd.title);
     if(cmd.play!==undefined){
       playerIframe.contentWindow.postMessage(`{"event":"command","func":"${cmd.play? "playVideo":"pauseVideo"}","args":""}`,'*');
     }
-
     if(cmd.mute!==undefined){
-      playerIframe.contentWindow.postMessage(`{"event":"command","func":"${cmd.mute? "mute":"unMute"}","args":""}`,'*');
+      playerIframe.contentWindow.postMessage(`{"event":"command","func":"${cmd.mute? "mute":"unMute"},"args":""}`,'*');
       showStatusText(cmd.mute ? "🔇 Tắt tiếng" : "🔊 Bật tiếng");
     }
-
     if(cmd.volume!==undefined){
       playerIframe.contentWindow.postMessage(`{"event":"command","func":"setVolume","args":[${cmd.volume}]}`,'*');
       showStatusText(`🔊 Volume: ${cmd.volume}`);
     }
-
     set(connectionRef,{connected:true, roomId});
   }
 });
@@ -148,16 +123,10 @@ onValue(connectionRef,snapshot=>{
   }
 });
 
-// Listen playlist updates
-const playlistRef = ref(db,"playlist/"+roomId);
-onValue(playlistRef, snapshot=>{
-  const data = snapshot.val();
-  const count = data ? Object.keys(data).length : 0;
-  playlistCountEl.textContent = `🎵 ${count} bài`;
-  if(count>0){
-    const latest = Object.values(data)[Object.keys(data).length-1];
-    showStatusText(`✅ Thêm bài: ${latest.title}`);
-  }
+// Tổng số bài đã phát
+onValue(playedCountRef,snapshot=>{
+  const count = snapshot.val()||0;
+  playedCountEl.textContent=`🎵 Tổng: ${count} bài`;
 });
 
 // Load YouTube IFrame API
@@ -165,9 +134,7 @@ let tag=document.createElement('script');
 tag.src="https://www.youtube.com/iframe_api";
 document.body.appendChild(tag);
 function onYouTubeIframeAPIReady(){
-  window.player=new YT.Player('player',{
-    events:{'onReady':()=>{},'onStateChange': e=>{} }
-  });
+  window.player=new YT.Player('player',{events:{'onReady':()=>{},'onStateChange': e=>{} }});
 }
 </script>
 </body>
